--- a/style.css
+++ b/style.css
@@ -2,3 +2,14 @@
     margin: 0px;
     padding: 0px;
 }
+
+.container {
+    width: 100%;
+    height: 750px;
+}
+
+nav {
+    width: 100%;
+    height: 100px;
+    background-color: tomato;
+}
